<resources>
    <string name="app_name">CapstoneAndroidExpert</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profil">Profile</string>

    <string name="dollar_value">$ %.2f</string>
    <string name="fake_market">Fake Market\n</string>
    <string name="product_title">Ini adalah produk</string>
    <string name="product_category">Category</string>
    <string name="product_rating">4.6</string>
    <string name="product_count">(%d)</string>
    <string name="product_desc">ini adalah deskripsi</string>
    <string name="title_chatfeature">ChatFeature</string>
    <string name="tambahkan_ke_keranjang">Tambahkan Ke Keranjang?</string>
    <string name="yakin">Apakah Anda Yakin?</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="tambahkan_ke_keranjangg">+ Keranjang</string>
    <string name="cart">Cart</string>
    <string name="ini_adalah_image">Ini adalah image</string>
    <string name="ini_adalah_button_favorite">Ini adalah Button Favorite</string>
    <string name="ini_adalah_rating">Ini adalah rating</string>
    <string name="ini_profile_rekk">Ini Profile REKK</string>
    <string name="mulyono">Mulyono</string>
    <string name="category">Category</string>
</resources>