<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/textView3"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/tambahkan_ke_keranjang"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/yakin"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                style="@style/ButtonYes"
                android:text="@string/yes" />


            <Button
                android:id="@+id/btn_no"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                style="@style/ButtonNo"
                android:text="@string/no" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>